--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint:scripts": "eslint --ext .ts,.tsx src"
   },
   "dependencies": {
     "@react-three/drei": "^9.61.1",
