--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "husky": "^8.0.3",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
+    "stylelint": "^15.4.0",
     "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-recess-order": "^4.0.0",
+    "stylelint-config-standard": "^32.0.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
