--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint:scripts": "eslint --ext .ts,.tsx src"
+    "lint:scripts": "eslint --ext .ts,.tsx src",
+    "lint:styles": "stylelint \"src/**/*.css\""
   },
   "dependencies": {
     "@react-three/drei": "^9.61.1",
