--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,3 @@
 {
-    "extends": ["stylelint-config-standard", "stylelint-config-recess-order", "stylelint-config-prettier"]
-  }
+  "extends": ["stylelint-config-standard", "stylelint-config-recess-order", "stylelint-config-prettier", "stylelint-config-tailwindcss"]
+}
