--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.5.1",
     "@commitlint/config-conventional": "^17.4.4",
+    "@types/jest": "^29.5.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
@@ -46,6 +47,7 @@
     "stylelint-config-standard": "^32.0.0",
     "stylelint-config-tailwindcss": "^0.0.7",
     "tailwindcss": "^3.3.1",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
