--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,8 @@
         },
         "ecmaVersion": "latest",
         "sourceType": "module",
-        "project": "./tsconfig.json"
+        "project": "./tsconfig.json",
+        "tsconfigRootDir": "__dirname",
     },
     "plugins": [
         "react",
