--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,16 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking"
   ],
-  "overrides": [],
+  "overrides": [
+    {
+      "files": ["src/**/*.test.ts", "src/**/*.test.tsx"],
+      "env": {
+        "jest": true
+      },
+      "extends": ["plugin:jest/recommended"],
+      "plugins": ["jest"]
+    }
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
@@ -26,7 +35,10 @@
     "tsconfigRootDir": "__dirname"
   },
   "plugins": ["react", "@typescript-eslint", "jest"],
-  "rules": {},
+  "ignorePatterns": ["cypress/**/*"],
+  "rules": {
+    "prettier/prettier": "error"
+  },
   "settings": {
     "react": {
       "version": "detect"
