--- a/jest.config.json
+++ b/jest.config.json
@@ -1,4 +1,7 @@
 {
     "preset": "ts-jest",
-    "testEnvironment": "jest-environment-jsdom"
+    "testEnvironment": "jest-environment-jsdom",
+    "testMatch": [
+        "**/src/**/?(*.)+(spec|test).[jt]s?(x)"
+    ]
 }
