--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,7 @@
     },
     "ecmaVersion": "latest",
     "sourceType": "module",
-    "project": "./tsconfig.json",
+    // "project": "./tsconfig.json",
     "tsconfigRootDir": "__dirname"
   },
   "plugins": ["react", "@typescript-eslint", "jest"],
