--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@juggle/resize-observer": "^3.4.0",
     "@react-three/drei": "^9.61.1",
     "@react-three/fiber": "^8.12.0",
     "framer-motion": "^10.10.0",
